# linkMaker-0.0.2

./: .gitignore  README.md  main.py  readme-ai.md  requirnments.txt  setup.py
cli_modules/: app.py  cli.py  utils.py
templates/: index.html
templinkmaker/: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
templinkmaker/.github/: ISSUE_TEMPLATE.md
templinkmaker/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
templinkmaker/src/templinkmaker/: __init__.py  cli.py
testFiles/: test.txt
