[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "templinkmaker"
version = "1.0.0"
description = "A python library to share files using ngrok and fla a server"
readme = "README.rst"
authors = [
  {name = "Siddhant Tayade", email = "sdiddtayade@gmail.com"}
]
maintainers = [
  {name = "Siddhant Tayade", email = "sdiddtayade@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/sdidd/templinkmaker/issues"
changelog = "https://github.com/sdidd/templinkmaker/blob/master/changelog.md"
homepage = "https://github.com/sdidd/templinkmaker"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

